--- a/Fenchurch/Pages/Articulos/15-Ebitda.razor
+++ b/Fenchurch/Pages/Articulos/15-Ebitda.razor
@@ -8,7 +8,7 @@
 
 <article class="container texto-cajas p-top no-header text-justified">
   <h1 class="text-center dark-red">
-      ¿CUÁNTO VALE MI EMPRESA? VALORACIÓN POR EL MÚLTIPLO DE EBITDA
+      VALORACIÓN POR EL MÚLTIPLO DE EBITDA
   </h1>
   <p>
       Si está pensando en vender su empresa, sin duda se habrá preguntado cuanto puede valer. Un factor clave en una venta exitosa es saber cómo maximizar y justificar el precio que se pide. El método de valoración más utilizado por la banca de inversión, capital riesgo, auditores y bancos es el Múltiplo de Ebitda, que está basado en la premisa de que empresas del mismo sector tienen múltiplos similares porque operan en un entorno económico similar.
@@ -47,4 +47,5 @@
       En el primer semestre de 2020, el Índice Argos Soditic, de empresas medianas vendidas (con valor de entre €15 y €500 millones en la zona €uro) alcanzó un múltiplo medio de Ebitda de 9.3X.
   </p>
 </article>
-<p style="height:100px"></p>
+<div class="col-md-12 contenedor-btn-print"><button type="button" class="btn-submit" onclick="imprimir()">Imprimir <i class="material-icons">print</i></button></div>
+<div class="bottom-placeholder"></div>
