--- a/Fenchurch/Pages/Articulos/16-proceso-de-compraventa-de-una-empresa.razor
+++ b/Fenchurch/Pages/Articulos/16-proceso-de-compraventa-de-una-empresa.razor
@@ -8,7 +8,7 @@
 
 <article class="container texto-cajas p-top no-header text-justified">
   <h1 class="text-center">
-      ¿CUÁL ES EL PROCESO DE UNA COMPRAVENTA DE UNA EMPRESA?
+    EL PROCESO DE VENTA DE UNA EMPRESA
   </h1>
   <p>
       <strong>
