--- a/Fenchurch/Pages/Articulos/3-reflexiones-sobre-el-proceso-de-venta.razor
+++ b/Fenchurch/Pages/Articulos/3-reflexiones-sobre-el-proceso-de-venta.razor
@@ -21,32 +21,25 @@
       La venta de una empresa es un proceso muy complicado que dura de 6 a 12 meses. Además, está en juego el patrimonio del propietario. Por eso es importante conocer las claves que le ayudarán a maximizar el precio de venta.
   </p>
 
-  <ol>
-      <li>
-          <strong>Utilice Asesores Experimentados</strong>
-          <p>El propietario sólo vende su empresa una vez en su vida y no tiene la competencia, la experiencia o el tiempo para dedicarle a este proceso. Habitualmente se rige por el refrán de “Zapatero a tus zapatos”, es decir, cuando tiene una inspección de Hacienda se asesora por un fiscalista, cuando construye una casa contrata los servicios de un arquitecto o cuando se le estropea el coche lo lleva al taller mecánico. Cuando su patrimonio está en juego, con más razón aún, es esencial seguir ese refrán y estar bien asesorado.</p>
-      </li>
-      <li>
-          <strong>Venta Activa</strong>
-          <p>Siempre adopte una estrategia activa. Esperar de manera pasiva a que venga el comprador idóneo es un error. Puede que jamás se interese un comprador por su empresa o que el comprador que le contacte no sea el que pueda ofrecerle el mejor precio. No todos los compradores son iguales – algunos por sus circunstancias particulares pueden hacer ofertas más atractivas que otros. Por eso es esencial contactar a todos los compradores potenciales, organizar una subasta y que todos ellos sean conscientes de que están en competencia entre si, para poder conseguir la mejor oferta existente en el mercado.</p>
-      </li>
-      <li>
-          <strong>Valoración</strong>
-          <p>En primer lugar, es esencial que el propietario tenga una idea clara del rango de valor de su empresa, fundamentado en la realidad del mercado, y que entienda el razonamiento detrás del mismo. De esta manera se podrá negociar de una manera seria y racional y evitar vender la empresa por debajo de su valor, o pedir un precio que no se pueda justificar y que impedirá su venta. En segundo lugar, es necesario identificar y entender los aspectos de su empresa que son atractivos para cada comprador para conseguir que ofrezcan los precios más altos posibles.</p>
-      </li>
-      <li>
-          <strong>Indicación de Precio</strong>
-          <p>No dé una indicación de precio porque es imponer un techo innecesariamente. Mejor insistir que los compradores – informados de que existen otros compradores – hagan su mejor oferta. En el caso de que las ofertas no diesen la talla, el vendedor comunicaría su precio mínimo para hacer la operación y calibraría las reacciones.</p>
-      </li>
-      <li>
-          <strong>Preparativos Previos</strong>
-          <p>Adopte todo tipo de medidas que resalten el atractivo de su empresa para que el esfuerzo de toda una vida se materialice en el precio más alto posible. Por ejemplo, eliminar todo tipo de contingencias, segregar activos no afectos a la venta, disponer de un equipo humano profesional, preparar la información que será requerida en la fase de “due diligence”, ajustar los estados financieros para que reflejen la realidad financiera de la empresa, etc.</p>
-      </li>
-      <li>
-          <strong>¿Cuál es el Mejor Momento para Maximizar el Precio de su Empresa?</strong>
-          <p>Lo ideal es vender su empresa cuando está funcionando a la perfección (rentabilidad y crecimiento en máximos históricos) y los mercados financieros están en un momento de “exuberancia irracional”, es decir, justo antes de que estalle la burbuja. Pero es imposible predecir cuando los mercados estarán en máximos. Además, existen otros muchos factores que influencian cuando se decide vender una empresa – salud del empresario, falta de sucesión, la falta de tamaño para ser competitivo…</p>
-      </li>
-  </ol>
+  
+      <strong>1. Utilice Asesores Experimentados</strong>
+      <p>El propietario sólo vende su empresa una vez en su vida y no tiene la competencia, la experiencia o el tiempo para dedicarle a este proceso. Habitualmente se rige por el refrán de “Zapatero a tus zapatos”, es decir, cuando tiene una inspección de Hacienda se asesora por un fiscalista, cuando construye una casa contrata los servicios de un arquitecto o cuando se le estropea el coche lo lleva al taller mecánico. Cuando su patrimonio está en juego, con más razón aún, es esencial seguir ese refrán y estar bien asesorado.</p>
+      
+      <strong>2.Venta Activa</strong>
+      <p>Siempre adopte una estrategia activa. Esperar de manera pasiva a que venga el comprador idóneo es un error. Puede que jamás se interese un comprador por su empresa o que el comprador que le contacte no sea el que pueda ofrecerle el mejor precio. No todos los compradores son iguales – algunos por sus circunstancias particulares pueden hacer ofertas más atractivas que otros. Por eso es esencial contactar a todos los compradores potenciales, organizar una subasta y que todos ellos sean conscientes de que están en competencia entre si, para poder conseguir la mejor oferta existente en el mercado.</p>
+      
+      <strong>3. Valoración</strong>
+      <p>En primer lugar, es esencial que el propietario tenga una idea clara del rango de valor de su empresa, fundamentado en la realidad del mercado, y que entienda el razonamiento detrás del mismo. De esta manera se podrá negociar de una manera seria y racional y evitar vender la empresa por debajo de su valor, o pedir un precio que no se pueda justificar y que impedirá su venta. En segundo lugar, es necesario identificar y entender los aspectos de su empresa que son atractivos para cada comprador para conseguir que ofrezcan los precios más altos posibles.</p>
+      
+      <strong>4. Indicación de Precio</strong>
+      <p>No dé una indicación de precio porque es imponer un techo innecesariamente. Mejor insistir que los compradores – informados de que existen otros compradores – hagan su mejor oferta. En el caso de que las ofertas no diesen la talla, el vendedor comunicaría su precio mínimo para hacer la operación y calibraría las reacciones.</p>
+      
+      <strong>5. Preparativos Previos</strong>
+      <p>Adopte todo tipo de medidas que resalten el atractivo de su empresa para que el esfuerzo de toda una vida se materialice en el precio más alto posible. Por ejemplo, eliminar todo tipo de contingencias, segregar activos no afectos a la venta, disponer de un equipo humano profesional, preparar la información que será requerida en la fase de “due diligence”, ajustar los estados financieros para que reflejen la realidad financiera de la empresa, etc.</p>
+      
+      <strong>6. ¿Cuál es el Mejor Momento para Maximizar el Precio de su Empresa?</strong>
+      <p>Lo ideal es vender su empresa cuando está funcionando a la perfección (rentabilidad y crecimiento en máximos históricos) y los mercados financieros están en un momento de “exuberancia irracional”, es decir, justo antes de que estalle la burbuja. Pero es imposible predecir cuando los mercados estarán en máximos. Además, existen otros muchos factores que influencian cuando se decide vender una empresa – salud del empresario, falta de sucesión, la falta de tamaño para ser competitivo…</p>
+      
 </article>
 <div class="col-md-12 contenedor-btn-print"><button type="button" class="btn-submit" onclick="imprimir()">Imprimir <i class="material-icons">print</i></button></div>
 <div class="bottom-placeholder"></div>
