--- a/Fenchurch/Shared/MainLayout.razor
+++ b/Fenchurch/Shared/MainLayout.razor
@@ -20,7 +20,7 @@
 													<span class="anagrama small titulo-anagrama">FENCHURCH</span>
 												</div>
 												<div class="anagrama small bajada-1">Corporate Finance</div>
-												<div class="anagrama small bajada-2">1989 - 2020</div>
+												<div class="anagrama small bajada-2">1989 - @(DateTime.Now.Year)</div>
 											</a>
 										</div>
 									</div>
