--- a/Fenchurch/wwwroot/css/style.css
+++ b/Fenchurch/wwwroot/css/style.css
@@ -35,7 +35,8 @@ body {
   font-size: 16px;
   line-height: 1.7;
   color: black;
-  background: #fff;
+  /* background: #fff; */
+  background: whitesmoke;
   position: relative;
   /* height: 100vh;
   width: 100vw; */
@@ -2044,7 +2045,7 @@ figure {
 
 .form-control {
   box-shadow: none;
-  background: #ccc !important;
+  background: white !important;
   border: 2px solid rgba(0, 0, 0, 0.1);
   height: 54px;
   font-size: 14px;
