--- a/Fenchurch/Pages/Articulos/15-Ebitda.razor
+++ b/Fenchurch/Pages/Articulos/15-Ebitda.razor
@@ -11,7 +11,7 @@
       VALORACIÓN POR EL MÚLTIPLO DE EBITDA
   </h1>
   <p>
-      Si está pensando en vender su empresa, sin duda se habrá preguntado cuanto puede valer. Un factor clave en una venta exitosa es saber cómo maximizar y justificar el precio que se pide. El método de valoración más utilizado por la banca de inversión, capital riesgo, auditores y bancos es el Múltiplo de Ebitda, que está basado en la premisa de que empresas del mismo sector tienen múltiplos similares porque operan en un entorno económico similar.
+      Si está pensando en vender su empresa, sin duda se habrá preguntado cuánto puede valer. Un factor clave en una venta exitosa es saber cómo maximizar y justificar el precio que se pide. El método de valoración más utilizado por la banca de inversión, capital riesgo, auditores y bancos es el Múltiplo de Ebitda, que está basado en la premisa de que empresas del mismo sector tienen múltiplos similares porque operan en un entorno económico similar.
   </p>
   <p>
       El Ebitda (por sus siglas en inglés: el Beneficio antes de Impuestos, Intereses, Depreciaciones y Amortizaciones) se usa para valorar empresas ya que este valor excluye los gastos no-operativos, como son los gastos financieros, los impuestos y las amortizaciones/depreciaciones. El Ebitda nos permite comparar exclusivamente los beneficios operativos de empresas similares, con lo cual se pueden comparar los múltiplos de Ebitda que se pagan en la bolsa o han sido pagados por la compra de empresas similares.
