--- a/Fenchurch/Pages/Articulos/16-proceso-de-compraventa-de-una-empresa.razor
+++ b/Fenchurch/Pages/Articulos/16-proceso-de-compraventa-de-una-empresa.razor
@@ -26,6 +26,7 @@
           <li>Determinar que medidas se pueden tomar para maximizar el precio de venta.</li>
           <li>Resolver todas las posibles contingencias (fiscales, legales, laborales, medioambientales).</li>
           <li>Ajustar los estados financieros para que reflejen la realidad económica de la empresa.</li>
+          <li>Maximizar el valor de la empresa.</li>
       </ul>
   </p>
   <p>
