--- a/Fenchurch/Pages/Articulos/17-calendario-de-actividad.razor
+++ b/Fenchurch/Pages/Articulos/17-calendario-de-actividad.razor
@@ -17,7 +17,7 @@
     <h4>Mes 2</h4>
     <ul>
         <li>Preparación del Cuaderno de Venta</li>
-        <li>Identificación de Compradores Potenciales</li>
+        <li>Identificación de Compradores</li>
         <li>Valoración</li>
     </ul>
     <h4>Mes 3</h4>
