--- a/Fenchurch/Pages/Articulos/19-definiciones-financieras.razor
+++ b/Fenchurch/Pages/Articulos/19-definiciones-financieras.razor
@@ -47,7 +47,7 @@
       </p>
       <p>
           <dt>Deuda Financiera Neta:</dt>
-          <dd>Deuda financiera a corto y largo plazo menos tesorería</dd>
+          <dd>Deuda financiera a corto y largo plazo menos tesorería.</dd>
       </p>
       <p>
           <dt>Due Diligence:</dt>
@@ -55,7 +55,7 @@
       </p>
       <p>
           <dt>Earn-Out:</dt>
-          <dd>Formula de pago aplazado mediante la cual se efectúa la compra de la empresa pagando una parte del precio al cierre de la operación, y el resto en una fecha futura (típicamente en uno o dos años) basado en un múltiplo previamente acordado de los beneficios futuros. Esta fórmula solo se suele usar cuando las perspectivas futuras de la empresa son mucho más optimistas que las del reciente pasado.</dd>
+          <dd>Fórmula de pago aplazado mediante la cual se efectúa la compra de la empresa pagando una parte del precio al cierre de la operación, y el resto en una fecha futura (típicamente en uno o dos años) basado en un múltiplo previamente acordado de los beneficios futuros. Esta fórmula solo se suele usar cuando las perspectivas futuras de la empresa son mucho más optimistas que las del reciente pasado.</dd>
       </p>
       <p>
           <dt>EBIT (Earnings Before Interest and Taxes):</dt>
@@ -79,7 +79,7 @@
       </p>
       <p>
           <dt>Mandato de Compra/Venta:</dt>
-          <dd>Contrato entre el asesor financiero y su cliente (los accionista o empresa compradora o vendedora) en la que se especifica el objetivo que se intenta conseguir, el proceso, la formula de remuneración, la vigencia y otras consideraciones legales.</dd>
+          <dd>Contrato entre el asesor financiero y su cliente (los accionista o empresa compradora o vendedora) en la que se especifica el objetivo que se intenta conseguir, el proceso, la fórmula de remuneración, la vigencia y otras consideraciones legales.</dd>
       </p>
       <p>
           <dt>MBI (Management Buy-In):</dt>
@@ -115,7 +115,7 @@
       </p>
       <p>
           <dt>Valoración:</dt>
-          <dd>La valoración de una empresa es una estimación de su valor de mercado, basada en un análisis de sus estados financieros históricos y previstos, así como una comparación con empresas similares que cotizan en bolsa o ha sido recientemente adquiridas.</dd>
+          <dd>La valoración de una empresa es una estimación de su valor de mercado, basada en un análisis de sus estados financieros históricos y previstos, así como una comparación con empresas similares que cotizan en bolsa o han sido recientemente adquiridas.</dd>
       </p>
   </dl>
 </article>
