--- a/Fenchurch/Pages/Articulos/3-reflexiones-sobre-el-proceso-de-venta.razor
+++ b/Fenchurch/Pages/Articulos/3-reflexiones-sobre-el-proceso-de-venta.razor
@@ -9,7 +9,7 @@
 
 <article class="container texto-cajas p-top no-header text-justified">
   <h1 class="text-center">
-      COMO MAXIMIZAR EL PRECIO DE VENTA DE SU EMPRESA
+      ¿CÓMO MAXIMIZAR EL PRECIO DE VENTA DE SU EMPRESA?
   </h1>
   <p class="text-center">
     <strong class="text-center">
