--- a/Fenchurch/Pages/Articulos/5-faq.razor
+++ b/Fenchurch/Pages/Articulos/5-faq.razor
@@ -25,12 +25,12 @@ Los métodos de valoración son cuantitativos y dan la impresión de exactitud m
       <p>Adopte todo tipo de medidas que resalten el atractivo de su empresa. Por ejemplo, eliminar todo tipo de contingencias, segregar todos los activos no afectos a la venta, tener un equipo profesional in situ, preparar toda la información que será requerida durante la fase de “Due Diligence”, ajustar los estados financieros para que reflejen la realidad financiera de la empresa.</p>
   </section>
   <section>
-      <strong>4. ¿Como se mantiene la confidencialidad de la venta?</strong>
+      <strong>4. ¿Cómo se mantiene la confidencialidad de la venta?</strong>
       <p>La violación de la confidencialidad perjudica a la empresa al generar incertidumbre entre los empleados, proveedores, clientes y bancos. La confidencialidad se consigue adhiriéndose a un riguroso proceso de selección de compradores y entregando solo aquella información necesaria para avanzar al siguiente nivel una vez que hayan firmado un Acuerdo de Confidencialidad.</p>
   </section>
   <section>
       <strong>5. ¿Cuánto tiempo se tarda en vender mi empresa?</strong>
-      <p>El proceso de vender una empresa dura entre 6 y 12 meses. Hay pasos que se pueden tomar en paralelo para avanzar el proceso, pero también hay pasos que solo se pueden tomar de una manera secuencial (por ejemplo, el contrato de compraventa solo se puede empezar a negociar una vez finalizado el “due diligence”). Naturalmente, la rapidez con la que el vendedor es capaz de suministrar la información requerida, el número de compradores interesados y, la flexibilidad de las agendas del comprador y vendedor influyen sobre la duración del proceso. Y muchas de estas cosas están fuera del control del vendedor.</p>
+      <p>El proceso de vender una empresa dura entre 6 y 12 meses. Hay pasos que se pueden tomar en paralelo para avanzar el proceso, pero también hay pasos que sólo se pueden tomar de una manera secuencial (por ejemplo, el contrato de compraventa sólo se puede empezar a negociar una vez finalizado el “due diligence”). Naturalmente, la rapidez con la que el vendedor es capaz de suministrar la información requerida, el número de compradores interesados y, la flexibilidad de las agendas del comprador y vendedor influyen sobre la duración del proceso. Y muchas de estas cosas están fuera del control del vendedor.</p>
   </section>
 </article>
 <div class="col-md-12 contenedor-btn-print"><button type="button" class="btn-submit" onclick="imprimir()">Imprimir <i class="material-icons">print</i></button></div>
