--- a/Fenchurch/Pages/Articulos/6-necesita-un-asesor-para-vender-su-empresa.razor
+++ b/Fenchurch/Pages/Articulos/6-necesita-un-asesor-para-vender-su-empresa.razor
@@ -20,7 +20,7 @@
       2. ¿Sabe lo que vale su empresa?
   </strong>
   <p>
-      Frecuentemente el valor atribuido no está correctamente fundamentado. El resultado puede ser que o malvendan su empresa, o no lleguen a venderla. El valor de una empresa depende de su rentabilidad futura. No importa que beneficios ha generado en el pasado, sino los que pueda generar en el futuro
+      Frecuentemente el valor atribuido no está correctamente fundamentado. El resultado puede ser que o malvendan su empresa, o no lleguen a venderla. El valor de una empresa depende de su rentabilidad futura. No importa que beneficios ha generado en el pasado, sino los que pueda generar en el futuro.
   </p>
 
   <strong>
