--- a/Fenchurch/Pages/Articulos/7-10-commandmendts.razor
+++ b/Fenchurch/Pages/Articulos/7-10-commandmendts.razor
@@ -14,7 +14,7 @@
     <p>A veces oímos el lamento de “Vendí mi negocio demasiado pronto”. Pero es bastante más frecuente oír “Debí vender mi negocio hace tres años”. Venda su empresa cuando las cosas van bien – cuando no tenga necesidad de vender; no cuando hay problemas y tenga que vender.</p>
       
     <strong>2. Planifique su vida personal</strong>
-    <p>Planifique como quiere disfrutar de su vida una vez que haya vendido su empresa. ¿A dónde quiere viajar? ¿Dónde quiere vivir? ¿Qué aficiones quiere practicar?</p>
+    <p>Planifique cómo quiere disfrutar de su vida una vez que haya vendido su empresa. ¿A dónde quiere viajar? ¿Dónde quiere vivir? ¿Qué aficiones quiere practicar?</p>
       
     <strong>3. Prepare la empresa para la venta</strong>
     <p>El valor de una empresa se puede aumentar adoptando medidas antes de poner a la empresa en venta: Por ejemplo, una auditoria hecha por una empresa de reputación; reducir la concentración de clientes; seleccionar a un sucesor; redactar un Plan de Negocio.</p>
@@ -26,13 +26,13 @@
     <p>Generalmente el propietario sólo vende su empresa una vez en su vida, y no tiene experiencia en el proceso de venta. Un asesor le ayudará a valorar la empresa, identificar a compradores, maximizar el precio, elaborar la documentación necesaria, minimizar garantías, negociar con compradores y mantener la confidencialidad.</p>
       
     <strong>6. Consiga múltiples ofertas por su empresa</strong>
-    <p>– El mejor precio siempre se consigue cuando la empresa es ofertada al universo de todos los compradores potenciales. Esto se hace de una manera confidencial.</p>
+    <p>El mejor precio siempre se consigue cuando la empresa es ofertada al universo de todos los compradores potenciales. Esto se hace de una manera confidencial.</p>
       
     <strong>7. Contrate los servicios de un abogado y un fiscalista especializados en fusiones y adquisiciones</strong>
     <p>El abogado y contable “de siempre” no tienen la experiencia especializada requerida.</p>
       
     <strong>8. Sea razonable en sus expectativas de precio y condiciones</strong>
-    <p>Existe un rango de valoraciones para empresas que comparten un perfil similar. El objetivo de un buen asesor es demostrarle al comprador porque el precio alto del rango es un precio razonable.</p>
+    <p>Existe un rango de valoraciones para empresas que comparten un perfil similar. El objetivo de un buen asesor es demostrarle al comprador por qué el precio alto del rango es un precio razonable.</p>
       
     <strong>9. Revele toda la información relevante desde el principio</strong>
     <p>La divulgación de un dato negativo de poca aparente importancia al comienzo de las negociaciones es un inconveniente que suele tener fácil arreglo. La divulgación de ese mismo dato en la mitad de las negociaciones, o peor aún durante el “due diligence” puede ser un detonante para revisar el precio ofrecido o incluso acabar con la operación.</p>
