--- a/Fenchurch/Pages/ArticulosComponent.razor
+++ b/Fenchurch/Pages/ArticulosComponent.razor
@@ -81,7 +81,7 @@
         <td class="item-apuntes">
           <li>
             <a href="/Articulos/reflexiones-sobre-el-proceso-de-venta">
-              Como maximizar el precio de venta de su empresa
+              ¿Cómo maximizar el precio de venta de su empresa?
             </a>
           </li>
         </td>
