--- a/Fenchurch/Pages/OperacionesComponent.razor
+++ b/Fenchurch/Pages/OperacionesComponent.razor
@@ -69,7 +69,7 @@
                             <td>Vegetales Congelados</td>
                         </tr>
                         <tr>
-                            <td>DELMODIS, Belgica</td>
+                            <td>DELMODIS, Bélgica</td>
                             <td>Cadena de Supermercados</td>
                         </tr>
                         <tr>
@@ -126,7 +126,7 @@
                         </tr>
                         <tr>
                             <td>MOVINOR, Navarra</td>
-                            <td>Material de Construcción de Construcción</td>
+                            <td>Fabricante de Material de Construcción</td>
                         </tr>
                         <tr>
                             <td>RUGBY GROUP, Reino Unido</td>
