--- a/Fenchurch/Shared/MainLayout.razor
+++ b/Fenchurch/Shared/MainLayout.razor
@@ -20,7 +20,7 @@
 													<span class="anagrama small titulo-anagrama">FENCHURCH</span>
 												</div>
 												<div class="anagrama small bajada-1">Corporate Finance</div>
-												<div class="anagrama small bajada-2">1989 - @(DateTime.Now.Year)</div>
+												<div class="anagrama small bajada-2">Constituida en 1989</div>
 											</a>
 										</div>
 									</div>
@@ -57,7 +57,7 @@
 										<a href="/Operaciones">Operaciones</a>
 									</li>
 									<li class="has-dropdown">
-										<a href="/Articulos">Articulos</a>
+										<a href="/Articulos">Artículos</a>
 									</li>
 									<li class="has-dropdown">
 										<a href="/Contacto">Contacto</a>
