--- a/Fenchurch/Pages/Articulos/8-valuation-truths.razor
+++ b/Fenchurch/Pages/Articulos/8-valuation-truths.razor
@@ -13,11 +13,12 @@
   <p>El valor de una empresa es muy subjetivo. Cada empresa es única y tiene cientos de variables que afectan a su valor. Nadie sabe exactamente lo que realmente vale una acción de Telefónica. O mejor dicho, existen muchas opiniones diferentes sobre cuál es su valor. El analista de un gran banco le da un valor y recomienda comprar, mientras que otro analista recomienda vender. Ambos analistas tienen acceso a la misma información sobre Telefónica, pero llegan a conclusiones diferentes sobre su valor.</p>
   <p>Las valoraciones de empresas nunca son objetivas por tres razones:</p>
 
-  <ul>
-      <li>Los modelos de valoración tienen muchas variables y pequeñas diferencias en las premisas iniciales pueden tener un impacto muy grande en el resultado final. Por esa razón nunca existe una sola valoración “correcta”.</li>
-      <li>Los números dan una apariencia de control, un sentido de precisión y la impresión de objetividad. Pero una valoración jamás puede dar una estimación precisa del valor de una empresa porque la precisión es imposible. No es una ciencia exacta.</li>
-      <li>Todas las valoraciones son sesgadas, la única cuestión es por cuanto y en que dirección. En la compraventa de empresas el propósito de una valoración nunca es buscar un valor imparcial, desinteresado y neutral, sino apoyar una tesis partidista. El comprador tiene que decidir cuál es el máximo precio que estaría dispuesto a ofrecer, y el vendedor tiene que determinar cuál es el precio mínimo que está dispuesto a aceptar.</li>
-  </ul>
+    <ul style="padding-right:20px">
+        <li>Los modelos de valoración tienen muchas variables y pequeñas diferencias en las premisas iniciales pueden tener un impacto muy grande en el resultado final. Por esa razón nunca existe una sola valoración “correcta”.</li>
+        <li>Los números dan una apariencia de control, un sentido de precisión y la impresión de objetividad. Pero una valoración jamás puede dar una estimación precisa del valor de una empresa porque la precisión es imposible. No es una ciencia exacta.</li>
+        <li>Todas las valoraciones son sesgadas, la única cuestión es por cuanto y en que dirección. En la compraventa de empresas el propósito de una valoración nunca es buscar un valor imparcial, desinteresado y neutral, sino apoyar una tesis partidista. El comprador tiene que decidir cuál es el máximo precio que estaría dispuesto a ofrecer, y el vendedor tiene que determinar cuál es el precio mínimo que está dispuesto a aceptar.</li>
+    </ul>
+
   <p>
       Una empresa puede tener diferentes valores para diferentes analistas. La interpretación de los hechos es clave para determinar el valor de una empresa. Pero el hecho de que no exista un solo valor objetivo no significa que cualquier valoración es tan correcta como otra. Uno puede distinguir entre una valoración que puede ser correcta y aquellos que claramente son falsos.
   </p>
