--- a/Fenchurch/Pages/CurriculumComponent.razor
+++ b/Fenchurch/Pages/CurriculumComponent.razor
@@ -7,8 +7,8 @@
     }
 </style>
 <div class="row p-top p-bottom">
-    <div class="col-md-4">
-        <img src="https://via.placeholder.com/450x600" class="image-responsive">
+    <div class="col-md-4 text-center">
+        <img src="/img/curriculum.jpg" height="600" class="image-responsive">
     </div>
     <div class="col-md-8">
         <h2>
