--- a/Fenchurch/wwwroot/css/style.css
+++ b/Fenchurch/wwwroot/css/style.css
@@ -36,7 +36,7 @@ body {
   line-height: 1.7;
   color: black;
   /* background: #fff; */
-  background: whitesmoke;
+  background: #CCC;
   position: relative;
   /* height: 100vh;
   width: 100vw; */
